--- a/utilities-api/pom.xml
+++ b/utilities-api/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>br.com.herculano</groupId>
-	<artifactId>Utils</artifactId>
+	<artifactId>Utilities</artifactId>
 	<version>0.0.1</version>
 	<name>Utilities-API</name>
 	<description>Utilities for Rest-API Spring Boot</description>
@@ -65,6 +65,14 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
